gitignore and some listeners

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,11 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+A3/Team_45/node_modules/
+A3/Team_45/node_modules/.bin/csvtojson
+A3/Team_45/node_modules/body-parser/HISTORY.md
+A3/Team_45/node_modules/.bin/csvtojson.cmd
+A3/Team_45/node_modules/body-parser/lib/read.js
+A3/Team_45/node_modules/body-parser/lib/types/json.js
+A3/Team_45/node_modules/body-parser/lib/types/text.js
+
