--- a/A3/Team_45/package.json
+++ b/A3/Team_45/package.json
@@ -9,5 +9,8 @@
   "author": "TEAM_45",
   "license": "ISC",
   "dependencies": {
+	"express" : "latest"
+	"csvtojson" : "latest"
+	"body-parser" : "latest"
   }
 }
